@@ -26,10 +26,15 @@ import java.lang.foreign.MemorySegment;
 import java.lang.invoke.MethodHandle;
 import java.lang.invoke.MethodHandles;
 import java.lang.invoke.MethodType;
+import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.Collections;
 import java.util.HashMap;
+import java.util.List;
 import java.util.Map;
 import java.util.Objects;
+import java.util.function.BiFunction;
+import java.util.stream.Collectors;
 
 import static java.lang.foreign.ValueLayout.ADDRESS;
 import static java.lang.foreign.ValueLayout.JAVA_FLOAT;
@@ -51,6 +56,10 @@ public final class JdkVectorLibrary implements VectorLibrary {
     static final MethodHandle applyCorrectionsMaxInnerProductBulk$mh;
     static final MethodHandle applyCorrectionsDotProductBulk$mh;
 
+    static final MethodHandle bbqApplyCorrectionsEuclideanBulk$mh;
+    static final MethodHandle bbqApplyCorrectionsMaxInnerProductBulk$mh;
+    static final MethodHandle bbqApplyCorrectionsDotProductBulk$mh;
+
     private static final JdkVectorSimilarityFunctions INSTANCE;
 
     /**
@@ -61,7 +70,9 @@ public final class JdkVectorLibrary implements VectorLibrary {
      * This can be used to force binding to functions from a lower tier (e.g. AVX2 on a AVX-512
      * capable processor), or to disable native functions completely (by passing 0).
      * Usage: {@code -Des.vec_caps_override=1}.
-     * For benchmarks, add {@code --jvmArgsPrepend "-Des.vec_caps_override=..."} to {@code --args}.
+     * For benchmarks, add {@code --jvmArgsPrepend "--add-modules=jdk.incubator.vector -Des.vec_caps_override=..."}
+     * to {@code --args}. Note: {@code --jvmArgsPrepend} on the CLI replaces the {@code @Fork} annotation's
+     * {@code jvmArgsPrepend}, so {@code --add-modules=jdk.incubator.vector} must be included explicitly.
      *
      * @return the caps override value, or -1 if the property is not defined or invalid.
      */
@@ -111,10 +122,125 @@ public final class JdkVectorLibrary implements VectorLibrary {
         throw new LinkageError("Native function [" + functionName + "] could not be found");
     }
 
+    private static class NativeFunctions {
+
+        private record NativeFunction<E extends Enum<E>>(OperationSignature<E> op, String typeName, FunctionDescriptor descriptor) {}
+
+        private static final FunctionDescriptor intSingle = FunctionDescriptor.of(JAVA_INT, ADDRESS, ADDRESS, JAVA_INT);
+        private static final FunctionDescriptor longSingle = FunctionDescriptor.of(JAVA_LONG, ADDRESS, ADDRESS, JAVA_INT);
+        private static final FunctionDescriptor floatSingle = FunctionDescriptor.of(JAVA_FLOAT, ADDRESS, ADDRESS, JAVA_INT);
+        private static final FunctionDescriptor bulk = FunctionDescriptor.ofVoid(ADDRESS, ADDRESS, JAVA_INT, JAVA_INT, ADDRESS);
+        private static final FunctionDescriptor bulkOffsets = FunctionDescriptor.ofVoid(
+            ADDRESS,
+            ADDRESS,
+            JAVA_INT,
+            JAVA_INT,
+            ADDRESS,
+            JAVA_INT,
+            ADDRESS
+        );
+
+        final List<NativeFunction<?>> nativeFunctions = new ArrayList<>();
+
+        public NativeFunctions add(DataType type, Iterable<Function> functions, Iterable<Operation> operations) {
+            functions.forEach(f -> operations.forEach(op -> {
+                String typeName = switch (type) {
+                    case INT7U -> "i7u";
+                    case INT4 -> "i4";
+                    case INT8 -> "i8";
+                    case FLOAT32 -> "f32";
+                };
+                FunctionDescriptor descriptor = switch (op) {
+                    case SINGLE -> switch (type) {
+                        case INT7U, INT4 -> intSingle;
+                        case INT8, FLOAT32 -> floatSingle;
+                    };
+                    case BULK, BULK_SPARSE -> bulk;
+                    case BULK_OFFSETS -> bulkOffsets;
+                };
+                nativeFunctions.add(new NativeFunction<>(new OperationSignature<>(f, type, op), typeName, descriptor));
+            }));
+            return this;
+        }
+
+        public NativeFunctions addBFloat16(Iterable<Function> functions, Iterable<Operation> operations) {
+            for (BFloat16QueryType type : BFloat16QueryType.values()) {
+                String typeName = switch (type) {
+                    case BFLOAT16 -> "Dbf16Qbf16";
+                    case FLOAT32 -> "Dbf16Qf32";
+                };
+                functions.forEach(f -> operations.forEach(op -> {
+                    FunctionDescriptor descriptor = switch (op) {
+                        case SINGLE -> floatSingle;
+                        case BULK, BULK_SPARSE -> bulk;
+                        case BULK_OFFSETS -> bulkOffsets;
+                    };
+                    nativeFunctions.add(new NativeFunction<>(new OperationSignature<>(f, type, op), typeName, descriptor));
+                }));
+            }
+            return this;
+        }
+
+        public NativeFunctions addBBQ(Iterable<BBQType> bbqTypes, Iterable<Operation> operations) {
+            bbqTypes.forEach(type -> operations.forEach(op -> {
+                String typeName = switch (type) {
+                    case D1Q4 -> "d1q4";
+                    case D2Q4 -> "d2q4";
+                    case D4Q4 -> "d4q4";
+                };
+                FunctionDescriptor descriptor = switch (op) {
+                    case SINGLE -> longSingle;
+                    case BULK, BULK_SPARSE -> bulk;
+                    case BULK_OFFSETS -> bulkOffsets;
+                };
+                nativeFunctions.add(new NativeFunction<>(new OperationSignature<>(Function.DOT_PRODUCT, type, op), typeName, descriptor));
+            }));
+            return this;
+        }
+
+        static Iterable<Function> allFunctions() {
+            return () -> Arrays.stream(Function.values()).iterator();
+        }
+
+        static Iterable<Operation> allOperations() {
+            return () -> Arrays.stream(Operation.values()).iterator();
+        }
+
+        static Iterable<BBQType> allBBQTypes() {
+            return () -> Arrays.stream(BBQType.values()).iterator();
+        }
+
+        private static String getOpName(Operation op) {
+            return switch (op) {
+                case SINGLE -> "";
+                case BULK -> "_bulk";
+                case BULK_OFFSETS -> "_bulk_offsets";
+                case BULK_SPARSE -> "_bulk_sparse";
+            };
+        }
+
+        private static String getFuncName(Function f) {
+            return switch (f) {
+                case COSINE -> "cos";
+                case DOT_PRODUCT -> "dot";
+                case SQUARE_DISTANCE -> "sqr";
+            };
+        }
+
+        public Map<OperationSignature<?>, MethodHandle> build(BiFunction<String, FunctionDescriptor, MethodHandle> binder) {
+            return nativeFunctions.stream()
+                .collect(
+                    Collectors.toUnmodifiableMap(
+                        f -> f.op,
+                        f -> binder.apply("vec_" + getFuncName(f.op.function()) + f.typeName + getOpName(f.op.operation()), f.descriptor)
+                    )
+                );
+        }
+    }
+
     static {
         LoaderHelper.loadLibrary("vec");
         MethodHandle vecCaps$mh = downcallHandle("vec_caps", FunctionDescriptor.of(JAVA_INT));
-        Map<OperationSignature<?>, MethodHandle> handles = new HashMap<>();
 
         try {
             int vecCaps = (int) vecCaps$mh.invokeExact();
@@ -128,111 +254,26 @@ public final class JdkVectorLibrary implements VectorLibrary {
             }
 
             if (finalVecCaps > 0) {
-                FunctionDescriptor intSingle = FunctionDescriptor.of(JAVA_INT, ADDRESS, ADDRESS, JAVA_INT);
-                FunctionDescriptor longSingle = FunctionDescriptor.of(JAVA_LONG, ADDRESS, ADDRESS, JAVA_INT);
-                FunctionDescriptor floatSingle = FunctionDescriptor.of(JAVA_FLOAT, ADDRESS, ADDRESS, JAVA_INT);
-                FunctionDescriptor bulk = FunctionDescriptor.ofVoid(ADDRESS, ADDRESS, JAVA_INT, JAVA_INT, ADDRESS);
-                FunctionDescriptor bulkOffsets = FunctionDescriptor.ofVoid(
-                    ADDRESS,
-                    ADDRESS,
-                    JAVA_INT,
-                    JAVA_INT,
-                    ADDRESS,
-                    JAVA_INT,
-                    ADDRESS
-                );
 
-                FunctionDescriptor bulkSparse = FunctionDescriptor.ofVoid(ADDRESS, ADDRESS, JAVA_INT, JAVA_INT, ADDRESS);
-
-                for (Function f : Function.values()) {
-                    String funcName = switch (f) {
-                        case COSINE -> "cos";
-                        case DOT_PRODUCT -> "dot";
-                        case SQUARE_DISTANCE -> "sqr";
-                    };
-
-                    for (Operation op : Operation.values()) {
-                        String opName = switch (op) {
-                            case SINGLE -> "";
-                            case BULK -> "_bulk";
-                            case BULK_OFFSETS -> "_bulk_offsets";
-                            case BULK_SPARSE -> "_bulk_sparse";
-                        };
-
-                        for (DataType type : DataType.values()) {
-                            // Only byte vectors have cosine
-                            // as floats are normalized to unit length to use dot_product instead
-                            if (f == Function.COSINE && type != DataType.INT8) continue;
-                            // Only DOT_PRODUCT is needed for int4 — other functions are computed by
-                            // applying correction terms on top of the raw dot product result.
-                            if (f != Function.DOT_PRODUCT && type == DataType.INT4) continue;
-                            // BULK_SPARSE only for INT7U, INT8, and INT4 — no native sparse functions exist for FLOAT32
-                            if (op == Operation.BULK_SPARSE && type == DataType.FLOAT32) continue;
-
-                            String typeName = switch (type) {
-                                case INT7U -> "i7u";
-                                case INT4 -> "i4";
-                                case INT8 -> "i8";
-                                case FLOAT32 -> "f32";
-                            };
-
-                            FunctionDescriptor descriptor = switch (op) {
-                                case SINGLE -> switch (type) {
-                                    case INT7U, INT4 -> intSingle;
-                                    case INT8, FLOAT32 -> floatSingle;
-                                };
-                                case BULK, BULK_SPARSE -> bulk;
-                                case BULK_OFFSETS -> bulkOffsets;
-                            };
-
-                            MethodHandle handle = bindFunction("vec_" + funcName + typeName + opName, finalVecCaps, descriptor);
-                            handles.put(new OperationSignature<>(f, type, op), handle);
-                        }
-
-                        for (BFloat16QueryType type : BFloat16QueryType.values()) {
-                            // only byte vectors have cosine
-                            if (f == Function.COSINE) continue;
-                            // BULK_SPARSE not yet implemented for bfloat16
-                            if (op == Operation.BULK_SPARSE) continue;
-
-                            String typeName = switch (type) {
-                                case BFLOAT16 -> "Dbf16Qbf16";
-                                case FLOAT32 -> "Dbf16Qf32";
-                            };
-
-                            FunctionDescriptor descriptor = switch (op) {
-                                case SINGLE -> floatSingle;
-                                case BULK, BULK_SPARSE -> bulk;
-                                case BULK_OFFSETS -> bulkOffsets;
-                            };
-
-                            MethodHandle handle = bindFunction("vec_" + funcName + typeName + opName, finalVecCaps, descriptor);
-                            handles.put(new OperationSignature<>(f, type, op), handle);
-                        }
-
-                        for (BBQType type : BBQType.values()) {
-                            // not implemented yet...
-                            if (f == Function.COSINE || f == Function.SQUARE_DISTANCE) continue;
-
-                            String typeName = switch (type) {
-                                case D1Q4 -> "d1q4";
-                                case D2Q4 -> "d2q4";
-                                case D4Q4 -> "d4q4";
-                            };
-
-                            FunctionDescriptor descriptor = switch (op) {
-                                case SINGLE -> longSingle;
-                                case BULK, BULK_SPARSE -> bulk;
-                                case BULK_OFFSETS -> bulkOffsets;
-                            };
-
-                            MethodHandle handle = bindFunction("vec_" + funcName + typeName + opName, finalVecCaps, descriptor);
-                            handles.put(new OperationSignature<>(f, type, op), handle);
-                        }
-                    }
-                }
-
-                HANDLES = Collections.unmodifiableMap(handles);
+                HANDLES = new NativeFunctions()
+                    // Only DOT_PRODUCT is needed for int4 — other functions are computed by applying correction terms on top of the raw
+                    // dot.
+                    .add(DataType.INT4, List.of(Function.DOT_PRODUCT), NativeFunctions.allOperations())
+                    .add(DataType.INT7U, List.of(Function.DOT_PRODUCT, Function.SQUARE_DISTANCE), NativeFunctions.allOperations())
+                    // Only byte vectors have cosine as other types are normalized to unit length to use dot_product instead
+                    .add(DataType.INT8, NativeFunctions.allFunctions(), NativeFunctions.allOperations())
+                    // No native BULK_SPARSE functions exist for Float32 or BFloat16
+                    .add(
+                        DataType.FLOAT32,
+                        List.of(Function.DOT_PRODUCT, Function.SQUARE_DISTANCE),
+                        List.of(Operation.SINGLE, Operation.BULK, Operation.BULK_OFFSETS)
+                    )
+                    .addBFloat16(
+                        List.of(Function.DOT_PRODUCT, Function.SQUARE_DISTANCE),
+                        List.of(Operation.SINGLE, Operation.BULK, Operation.BULK_OFFSETS)
+                    )
+                    .addBBQ(NativeFunctions.allBBQTypes(), NativeFunctions.allOperations())
+                    .build((functionName, functionDescriptor) -> bindFunction(functionName, finalVecCaps, functionDescriptor));
 
                 FunctionDescriptor score = FunctionDescriptor.of(
                     JAVA_FLOAT,
@@ -257,6 +298,32 @@ public final class JdkVectorLibrary implements VectorLibrary {
                 );
                 applyCorrectionsDotProductBulk$mh = bindFunction("diskbbq_apply_corrections_dot_product_bulk", finalVecCaps, score);
 
+                // BBQ corrections: per-vector inline layout with nodes array
+                FunctionDescriptor bbqScore = FunctionDescriptor.of(
+                    JAVA_FLOAT,
+                    ADDRESS,     // data (entire vector data segment)
+                    JAVA_INT,    // bulkSize
+                    JAVA_INT,    // vectorSizeInBytes
+                    JAVA_INT,    // pitchInBytes
+                    JAVA_INT,    // dimensions
+                    JAVA_FLOAT,  // queryLowerInterval
+                    JAVA_FLOAT,  // queryUpperInterval
+                    JAVA_INT,    // queryComponentSum
+                    JAVA_FLOAT,  // queryAdditionalCorrection
+                    JAVA_FLOAT,  // queryBitScale
+                    JAVA_FLOAT,  // indexBitScale
+                    JAVA_FLOAT,  // centroidDp
+                    ADDRESS      // scores
+                );
+
+                bbqApplyCorrectionsEuclideanBulk$mh = bindFunction("bbq_apply_corrections_euclidean_bulk", finalVecCaps, bbqScore);
+                bbqApplyCorrectionsMaxInnerProductBulk$mh = bindFunction(
+                    "bbq_apply_corrections_maximum_inner_product_bulk",
+                    finalVecCaps,
+                    bbqScore
+                );
+                bbqApplyCorrectionsDotProductBulk$mh = bindFunction("bbq_apply_corrections_dot_product_bulk", finalVecCaps, bbqScore);
+
                 INSTANCE = new JdkVectorSimilarityFunctions();
             } else {
                 if (finalVecCaps < 0) {
@@ -268,6 +335,9 @@ public final class JdkVectorLibrary implements VectorLibrary {
                 applyCorrectionsEuclideanBulk$mh = null;
                 applyCorrectionsMaxInnerProductBulk$mh = null;
                 applyCorrectionsDotProductBulk$mh = null;
+                bbqApplyCorrectionsEuclideanBulk$mh = null;
+                bbqApplyCorrectionsMaxInnerProductBulk$mh = null;
+                bbqApplyCorrectionsDotProductBulk$mh = null;
                 INSTANCE = null;
             }
         } catch (Throwable t) {
@@ -787,11 +857,123 @@ public final class JdkVectorLibrary implements VectorLibrary {
             }
         }
 
+        private static float bbqApplyCorrectionsEuclideanBulk(
+            MemorySegment data,
+            int bulkSize,
+            int vectorSizeInBytes,
+            int pitchInBytes,
+            int dimensions,
+            float queryLowerInterval,
+            float queryUpperInterval,
+            int queryComponentSum,
+            float queryAdditionalCorrection,
+            float queryBitScale,
+            float indexBitScale,
+            float centroidDp,
+            MemorySegment scores
+        ) {
+            try {
+                return (float) bbqApplyCorrectionsEuclideanBulk$mh.invokeExact(
+                    data,
+                    bulkSize,
+                    vectorSizeInBytes,
+                    pitchInBytes,
+                    dimensions,
+                    queryLowerInterval,
+                    queryUpperInterval,
+                    queryComponentSum,
+                    queryAdditionalCorrection,
+                    queryBitScale,
+                    indexBitScale,
+                    centroidDp,
+                    scores
+                );
+            } catch (Throwable t) {
+                throw new AssertionError(t);
+            }
+        }
+
+        private static float bbqApplyCorrectionsMaxInnerProductBulk(
+            MemorySegment data,
+            int bulkSize,
+            int vectorSizeInBytes,
+            int pitchInBytes,
+            int dimensions,
+            float queryLowerInterval,
+            float queryUpperInterval,
+            int queryComponentSum,
+            float queryAdditionalCorrection,
+            float queryBitScale,
+            float indexBitScale,
+            float centroidDp,
+            MemorySegment scores
+        ) {
+            try {
+                return (float) bbqApplyCorrectionsMaxInnerProductBulk$mh.invokeExact(
+                    data,
+                    bulkSize,
+                    vectorSizeInBytes,
+                    pitchInBytes,
+                    dimensions,
+                    queryLowerInterval,
+                    queryUpperInterval,
+                    queryComponentSum,
+                    queryAdditionalCorrection,
+                    queryBitScale,
+                    indexBitScale,
+                    centroidDp,
+                    scores
+                );
+            } catch (Throwable t) {
+                throw new AssertionError(t);
+            }
+        }
+
+        private static float bbqApplyCorrectionsDotProductBulk(
+            MemorySegment data,
+            int bulkSize,
+            int vectorSizeInBytes,
+            int pitchInBytes,
+            int dimensions,
+            float queryLowerInterval,
+            float queryUpperInterval,
+            int queryComponentSum,
+            float queryAdditionalCorrection,
+            float queryBitScale,
+            float indexBitScale,
+            float centroidDp,
+            MemorySegment scores
+        ) {
+            try {
+                return (float) bbqApplyCorrectionsDotProductBulk$mh.invokeExact(
+                    data,
+                    bulkSize,
+                    vectorSizeInBytes,
+                    pitchInBytes,
+                    dimensions,
+                    queryLowerInterval,
+                    queryUpperInterval,
+                    queryComponentSum,
+                    queryAdditionalCorrection,
+                    queryBitScale,
+                    indexBitScale,
+                    centroidDp,
+                    scores
+                );
+            } catch (Throwable t) {
+                throw new AssertionError(t);
+            }
+        }
+
         private static final Map<OperationSignature<?>, MethodHandle> HANDLES_WITH_CHECKS;
 
         static final MethodHandle APPLY_CORRECTIONS_EUCLIDEAN_HANDLE_BULK;
         static final MethodHandle APPLY_CORRECTIONS_MAX_INNER_PRODUCT_HANDLE_BULK;
         static final MethodHandle APPLY_CORRECTIONS_DOT_PRODUCT_HANDLE_BULK;
+
+        static final MethodHandle BBQ_APPLY_CORRECTIONS_EUCLIDEAN_HANDLE_BULK;
+        static final MethodHandle BBQ_APPLY_CORRECTIONS_MAX_INNER_PRODUCT_HANDLE_BULK;
+        static final MethodHandle BBQ_APPLY_CORRECTIONS_DOT_PRODUCT_HANDLE_BULK;
 
         static {
             MethodHandles.Lookup lookup = MethodHandles.lookup();
@@ -1090,6 +1272,39 @@ public final class JdkVectorLibrary implements VectorLibrary {
                     "applyCorrectionsDotProductBulk",
                     scoringFunction
                 );
+
+                MethodType bbqScoringFunction = MethodType.methodType(
+                    float.class,
+                    MemorySegment.class,  // data
+                    int.class,            // bulkSize
+                    int.class,            // vectorSizeInBytes
+                    int.class,            // pitchInBytes
+                    int.class,            // dimensions
+                    float.class,          // queryLowerInterval
+                    float.class,          // queryUpperInterval
+                    int.class,            // queryComponentSum
+                    float.class,          // queryAdditionalCorrection
+                    float.class,          // queryBitScale
+                    float.class,          // indexBitScale
+                    float.class,          // centroidDp
+                    MemorySegment.class   // scores
+                );
+
+                BBQ_APPLY_CORRECTIONS_EUCLIDEAN_HANDLE_BULK = lookup.findStatic(
+                    JdkVectorSimilarityFunctions.class,
+                    "bbqApplyCorrectionsEuclideanBulk",
+                    bbqScoringFunction
+                );
+                BBQ_APPLY_CORRECTIONS_MAX_INNER_PRODUCT_HANDLE_BULK = lookup.findStatic(
+                    JdkVectorSimilarityFunctions.class,
+                    "bbqApplyCorrectionsMaxInnerProductBulk",
+                    bbqScoringFunction
+                );
+                BBQ_APPLY_CORRECTIONS_DOT_PRODUCT_HANDLE_BULK = lookup.findStatic(
+                    JdkVectorSimilarityFunctions.class,
+                    "bbqApplyCorrectionsDotProductBulk",
+                    bbqScoringFunction
+                );
             } catch (ReflectiveOperationException e) {
                 throw new AssertionError(e);
             }
@@ -1132,6 +1347,21 @@ public final class JdkVectorLibrary implements VectorLibrary {
         @Override
         public MethodHandle applyCorrectionsDotProductBulk() {
             return APPLY_CORRECTIONS_DOT_PRODUCT_HANDLE_BULK;
+        }
+
+        @Override
+        public MethodHandle bbqApplyCorrectionsEuclideanBulk() {
+            return BBQ_APPLY_CORRECTIONS_EUCLIDEAN_HANDLE_BULK;
+        }
+
+        @Override
+        public MethodHandle bbqApplyCorrectionsMaxInnerProductBulk() {
+            return BBQ_APPLY_CORRECTIONS_MAX_INNER_PRODUCT_HANDLE_BULK;
+        }
+
+        @Override
+        public MethodHandle bbqApplyCorrectionsDotProductBulk() {
+            return BBQ_APPLY_CORRECTIONS_DOT_PRODUCT_HANDLE_BULK;
         }
     }
 }
